--- a/Part 2 Mazesolver.ipynb
+++ b/Part 2 Mazesolver.ipynb
@@ -22,6 +22,8 @@
     "\n",
     "A heuristic function, also simply called a heuristic, is a function that ranks alternatives in search algorithms at each branching step based on available information to decide which branch to follow. For example, it may approximate the exact solution.\n",
     "\n",
+    " h(n) = estimated cost of the cheapest path from node n to goal node. If n is goal then h(n)=0. Its value is independent of the current search tree; it depends only on the state(n) and the goal test.\n",
+    "\n",
     "### Heuristic search algorithms:\n",
     "\n",
     " The best-known of these is A*, but we’ll use the more-human-intuitive “greedy best-first” search. Like breadth-first search, best-first explores multiple paths in parallel. But rather than brute-force searching all the paths, best-first focuses on paths which are closest to the goal “as the bird flies”. Distance from the goal serves as an heuristic to steer the search.\n",
@@ -29,6 +31,29 @@
     "But heuristic search comes with a catch: it’s only as good as the heuristic. If we use straight-line distance from the goal as an heuristic, then heuristic search is going to work well if-and-only-if the solution path is relatively straight. If the solution path wiggles around a lot, especially on a large scale, then heuristic search won’t help much.\n",
     "\n",
     "The problem with any heuristic search is that it’s only as good as our heuristic. In particular, most heuristics are “local”: like the straight-line distance heuristic, they’re bad at accounting for large-scale problem structure. Without some knowledge of large-scale problem structure, local heuristics will lead us down many dead ends. Eventually, when we find the “right” solution, we realize in hindsight that we weren’t really solving the right problem, in some intuitive sense — more on that later.\n",
+    "\n",
+    "### Greedy best-first search:\n",
+    "• Evaluation function f(n) = h(n) (heuristic) = estimate of cost from n to goal. \n",
+    "\n",
+    "• hSLD(n) = straight-line distance from n\n",
+    "to Bucharest\n",
+    "\n",
+    "• Greedy best-first search expands the node that appears to be closest to goal\n",
+    "\n",
+    "## A* search:\n",
+    "\n",
+    "Avoid expanding paths that are already expensive.\n",
+    "\n",
+    "• Combines the two evaluation functions (of\n",
+    "UCS and GBFS) by summing them up\n",
+    "\n",
+    "• Evaluation function f(n) = g(n) + h(n):\n",
+    "\n",
+    "– g(n) = cost (so far) from start node to reach n.\n",
+    "\n",
+    "– h(n) = estimated cost to get from n to goal.\n",
+    "\n",
+    "– f(n) = estimated total cost of cheapest path solution through n to goal                                \n",
     "\n",
     "\n",
     "\n"
@@ -55,6 +80,15 @@
     "\n",
     "If the optimal overall solution to the problem corresponds to the optimal solution to its subproblems, then the problem can be solved using a greedy approach. This property is called optimal substructure.\n",
     "\n",
+    "### Properties of greedy best-first search\n",
+    "• Complete? No – can get stuck in loops.\n",
+    "\n",
+    "• Time? O(b^m), but a good heuristic can give dramatic improvement.\n",
+    "\n",
+    "• Space? O(b^m), keeps all nodes in memory\n",
+    "\n",
+    "• Optimal? No\n",
+    "\n",
     "\n"
    ]
   },
@@ -63,7 +97,163 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class GreedyPath:\n",
+    "    Alto = 0\n",
+    "    Ancho = 0\n",
+    "    y = 1\n",
+    "    validPositions = None\n",
+    "\n",
+    "    verticalStep = None\n",
+    "    horizontalStep = None\n",
+    "\n",
+    "\n",
+    "    #the agent has a starting point\n",
+    "    #and an objective\n",
+    "    def __init__(self,startPoint,objective, alto, ancho, size, ValidPositions):\n",
+    "\n",
+    "        GreedyPath.Alto = alto\n",
+    "        GreedyPath.Ancho = ancho\n",
+    "        GreedyPath.y = size\n",
+    "        GreedyPath.validPositions = ValidPositions.copy()\n",
+    "\n",
+    "        GreedyPath.horizontalStep = GreedyPath.Ancho/GreedyPath.y\n",
+    "        GreedyPath.verticalStep = GreedyPath.Alto/GreedyPath.y\n",
+    "\n",
+    "        #adjust the starting point to the coordinate system\n",
+    "        self.start = startPoint\n",
+    "        self.objective = objective\n",
+    "\n",
+    "        #Set the agent's currrent position to the start\n",
+    "        self.actualPosition = self.start\n",
+    "\n",
+    "        #Start a stack to store the actual path\n",
+    "        self.actualPath = collections.deque()\n",
+    "        #And add the actual position (start) to the stack\n",
+    "        self.actualPath.append(self.actualPosition)\n",
+    "\n",
+    "        #also, a stack to add the instructions\n",
+    "        #\"up\",\"down\",\"left\",\"right\" (always lowercase)\n",
+    "        self.directions = collections.deque()\n",
+    "\n",
+    "\n",
+    "\n",
+    "    #obtain the adjacent valid positions to a given position\n",
+    "    def adjacentPositions(self,position):\n",
+    "        adjacent = []\n",
+    "        adjacent.append(((tuple(np.subtract(position,(GreedyPath.verticalStep,0)))),\"up\"))\n",
+    "        adjacent.append(((tuple(np.add(position,(GreedyPath.verticalStep,0)))),\"down\"))\n",
+    "        adjacent.append(((tuple(np.subtract(position,(0,GreedyPath.horizontalStep)))),\"left\"))\n",
+    "        adjacent.append(((tuple(np.add(position,(0,GreedyPath.horizontalStep)))),\"right\"))\n",
+    "\n",
+    "\n",
+    "        ind = 0\n",
+    "        while ind < len(adjacent):\n",
+    "            if adjacent[ind][0] not in GreedyPath.validPositions:\n",
+    "                adjacent.remove(adjacent[ind])\n",
+    "                ind-=1\n",
+    "            ind+=1\n",
+    "\n",
+    "        return adjacent\n",
+    "\n",
+    "\n",
+    "    #check if the actual position is the objective\n",
+    "    def CheckObjective(self):\n",
+    "        return (self.actualPosition == self.objective)\n",
+    "\n",
+    "\n",
+    "    #Calculate manhattan distance from a point to the objective\n",
+    "    def calcDistanceToObjective(self,position):\n",
+    "        difference = np.subtract(self.objective,position)\n",
+    "        distance = abs(difference[0]) + abs(difference[1])\n",
+    "        return distance\n",
+    "\n",
+    "\n",
+    "    def explore(self):\n",
+    "        \"\"\"\n",
+    "        Function to explore\n",
+    "\n",
+    "        returns:\n",
+    "            0 (still exploring)\n",
+    "            1 (found the objective)\n",
+    "            -1 (ran out of valid positions and asumes the objective is unreachable)\n",
+    "        \"\"\"\n",
+    "\n",
+    "        #check if we have reached the objective yet\n",
+    "        #if not\n",
+    "        if not self.CheckObjective():\n",
+    "\n",
+    "            #take the adjacent valid positions\n",
+    "            adjacents = self.adjacentPositions(self.actualPosition)\n",
+    "\n",
+    "            #if the list isn't void (there's at least one\n",
+    "            #adjacent valid position)\n",
+    "            if len(adjacents) != 0:\n",
+    "\n",
+    "                #initialize a variable to store minimum distance\n",
+    "                #and the position corresponding to it\n",
+    "                minDistance = math.inf\n",
+    "                minPosition = None\n",
+    "\n",
+    "                #for each position\n",
+    "                for pos in adjacents:\n",
+    "\n",
+    "                    #if the manhattan distance from it to the objective\n",
+    "                    #is lesser than our current minimum position\n",
+    "                    dist = self.calcDistanceToObjective(pos[0])\n",
+    "                    if  dist < minDistance:\n",
+    "\n",
+    "                        #set this position and its distance as minimums\n",
+    "                        minDistance = dist\n",
+    "                        minPosition = pos\n",
+    "\n",
+    "                #change the actual position to the position with the minimum distance\n",
+    "                self.actualPosition = minPosition[0]\n",
+    "\n",
+    "                #remove our actual position from the list of valid positions\n",
+    "                #to avoid loops\n",
+    "                GreedyPath.validPositions.remove(self.actualPosition)\n",
+    "\n",
+    "                #append the direction we took to the direction list\n",
+    "                self.directions.append(minPosition[1])\n",
+    "\n",
+    "                #and the position we are to our path\n",
+    "                self.actualPath.append(minPosition[0])\n",
+    "\n",
+    "\n",
+    "            #if there's no adjacent valid position\n",
+    "            else:\n",
+    "                #check if the path is not void (we aren't in the start)\n",
+    "                if self.actualPath:\n",
+    "\n",
+    "                    #take out the last position\n",
+    "                    self.actualPath.pop()\n",
+    "\n",
+    "                    #\"take one step back\"\n",
+    "                    #(change position to the last position in the path)\n",
+    "                    if self.actualPath:\n",
+    "                        self.actualPosition = self.actualPath[-1]\n",
+    "\n",
+    "                    #if our actualPath is empty\n",
+    "                    #we ran out of options\n",
+    "                    else:\n",
+    "                        return -1\n",
+    "\n",
+    "                #remove the last direction taken\n",
+    "                if self.directions:\n",
+    "                    self.directions.pop()\n",
+    "\n",
+    "            return 0\n",
+    "\n",
+    "        #if we are in our objective\n",
+    "        else:\n",
+    "            print(\"Objective found\")\n",
+    "            print(\"Path:\")\n",
+    "            for action in self.directions:\n",
+    "                print(action)\n",
+    "\n",
+    "            return 1"
+   ]
   }
  ],
  "metadata": {
