--- a/Part 2 Mazesolver.ipynb
+++ b/Part 2 Mazesolver.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "• Greedy best-first search expands the node that appears to be closest to goal\n",
     "\n",
-    "## A* search:\n",
+    "### A* search:\n",
     "\n",
     "Avoid expanding paths that are already expensive.\n",
     "\n",
@@ -93,11 +93,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#CODE OF GREEDYPATH\n",
     "class GreedyPath:\n",
     "    Alto = 0\n",
     "    Ancho = 0\n",
