--- a/Part 2 Mazesolver.ipynb
+++ b/Part 2 Mazesolver.ipynb
@@ -26,6 +26,17 @@
     "\n",
     "### Heuristic search algorithms:\n",
     "\n",
+    "\n",
+    "\n",
+    "Informed search methods have access to a heuristic function h(n) that estimates the cost of a solution from n. They may have access to additional information such as pattern databases with solution costs.\n",
+    "\n",
+    "– Greedy best-first search expands nodes with minimal h(n). It is not optimal but\n",
+    "is often efficient.\n",
+    "\n",
+    "– A ∗ search expands nodes with minimal f(n) = g(n) + h(n). A∗\n",
+    "is complete and optimal, provided that h(n) is admissible. The space complexity of A∗ is still an issue for many problems.\n",
+    "\n",
+    "\n",
     " The best-known of these is A*, but we’ll use the more-human-intuitive “greedy best-first” search. Like breadth-first search, best-first explores multiple paths in parallel. But rather than brute-force searching all the paths, best-first focuses on paths which are closest to the goal “as the bird flies”. Distance from the goal serves as an heuristic to steer the search.\n",
     "\n",
     "But heuristic search comes with a catch: it’s only as good as the heuristic. If we use straight-line distance from the goal as an heuristic, then heuristic search is going to work well if-and-only-if the solution path is relatively straight. If the solution path wiggles around a lot, especially on a large scale, then heuristic search won’t help much.\n",
@@ -53,7 +64,8 @@
     "\n",
     "– h(n) = estimated cost to get from n to goal.\n",
     "\n",
-    "– f(n) = estimated total cost of cheapest path solution through n to goal                                \n",
+    "– f(n) = estimated total cost of cheapest path solution through n to goal   \n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -63,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##  2.The greedy search algorithm\n",
+    "##  2. The greedy search algorithm\n",
     "\n",
     "Greedy is an algorithmic paradigm that builds up a solution piece by piece, always choosing the next piece that offers the most obvious and immediate benefit. So the problems where choosing locally optimal also leads to global solution are the best fit for Greedy.\n",
     "The algorithm never reverses the earlier decision even if the choice is wrong. It works in a top-down approach.\n",
@@ -93,13 +105,32 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<img src=\"https://repository-images.githubusercontent.com/360516784/d5b2c16e-d874-41ae-8584-9f3f548fd631\"/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Image object>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(url=\"https://repository-images.githubusercontent.com/360516784/d5b2c16e-d874-41ae-8584-9f3f548fd631\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +291,41 @@
     "\n",
     "            return 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "GBFS is a search algorithm that opens all connected nodes and goes to the cheapest node based on the heuristic value of that node. Every time new nodes are discovered they are added to the (search database) or in other words a table that contains all known nodes. GBFS will then always go to the cheapest node in that search database. Lets do an example on the search path on this Heuristic search tree with GBFS: Let us see how this works for route-finding problems in Romania; we use the straight line distance heuristic, which we will call hSLD. If the goal is Bucharest, we need to know the straight-line distances to Bucharest, which are shown in the figute shown below For example, hSLD(Arad)=366. Notice that the values of hSLD cannot be computed from the problem description itself (that is, the ACTIONS and RESULT functions). Moreover, it takes a certain amount of world knowledge to know that hSLD is correlated with actual road distances and is, therefore, a useful heuristic.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (1118745190.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn [13], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    Image(\"C:\\Users\\paola\\OneDrive\\Documentos\\GitHub\\ProyectosIA\\Images\\Greedybfs.png\")\u001b[0m\n\u001b[1;37m                                                                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import Image\n",
+    "Image(\"C:\\Users\\paola\\OneDrive\\Documentos\\GitHub\\ProyectosIA\\Images\\Greedybfs.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is why the algorithm is called “greedy”—on each iteration it tries to get as close to a goal as it can,but greediness can lead to worse results than being careful.Greedy best-first graph search is complete in finite state spaces, but not in infinite ones.\n",
+    "The worst-case time and space complexity is O(|V|). With a good heuristic function, however,\n",
+    "the complexity can be reduced substantially, on certain problems reaching O(bm).\n"
+   ]
   }
  ],
  "metadata": {
@@ -269,7 +335,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.7"
   },
   "orig_nbformat": 4,
