--- a/Part 2 Mazesolver.ipynb
+++ b/Part 2 Mazesolver.ipynb
@@ -782,6 +782,38 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Proof of Dechter y Pearl: \n",
+    "\n",
+    "Notation: \n",
+    "G Directed locally finite graph, G = (V, E).\n",
+    "\n",
+    "C* The cost of the cheapest solution path.\n",
+    "    \n",
+    "C(.)  The cost function defined over all solution paths.\n",
+    "\n",
+    "F A set of goal nodes, F Subset V.\n",
+    "\n",
+    "s start node.\n",
+    "\n",
+    "A* is said to be O-optimal over A relative to I iff, in every problem instance, i in I, every tie-breaking rule in A* expands a subset of the nodes expanded by any member of A. (In other words, every tie-breaking rule dominates all members of A.) We are now ready to introduce the four domains of problem instances over which the optimality of A* is to be examined. The first two relate to the admissibility and consistency of h(n). \n",
+    "Corresponding to these two properties, we define the following sets of problem instances:\n",
+    "\n",
+    "-IAD = ((G, s, F, h) 1 h <= h* on (G, F)),\n",
+    "\n",
+    "-ICON = ((G, s, F, h) 1 h is consistent on G) . \n",
+    "\n",
+    "Clearly, consistency implies admissibility. but not vice versa; therefore,ICON subset of IAD. A special and important subset of IAD (and ICON), called nonpathological instances, are those instances for which there exists at least one optimal solution path along which h is not fully informed; that is, h < h* for every nongoal node on that path. The nonpathological subsets of IAD and ICON are denoted by I~AD and I~CON respectively.\n",
+    "\n",
+    "It is known that, if h <= h*, then A* expands every node reachable from s by a strictly C*-bounded path, regardless of the tie-breaking rule used. The set of nodes with this property is referred to as surely expanded by A*. In general, for an arbitrary constant d and an arbitrary evaluation function fover (G, s, F, h), we let\n",
+    "Ndf denote the set of all nodes reachable from s by some strictly d-bounded path in G. For example, NC*_g+h is a set of nodes surely expanded by A* in some instance of\n",
+    "IAD.\n",
+    "The importance of nonpathological instances lies in the fact that in such instances the set of nodes surely expanded by A* are indeed all the nodes expanded by it. Therefore, for these instances, any claim regarding the set of nodes surely expanded by A* can be translated to “the set of all the nodes” expanded by A*. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
